--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 			<image width="700" height="1071" xlink:href="book/Images/cover.jpeg"/>
 		</svg>
 	</div>
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_1.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_1.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="book/Text/note_1.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="book/Text/note_1.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 </body>
 </html>
