--- a/book/Text/note_10.xhtml
+++ b/book/Text/note_10.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_9.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_11.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_10">←10</a>]</dt>
 		<dd class="footnote">关于马克思《关于费尔巴哈的提纲》的批判性解读，参见皮埃尔·马舍雷，《马克思1845：关于费尔巴哈的“提纲”》，巴黎：阿姆斯特丹版,2008,特别是229-32。</dd>
