--- a/book/Text/note_15.xhtml
+++ b/book/Text/note_15.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_14.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_16.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_15">←15</a>]</dt>
 		<dd class="footnote">马尔库塞的《爱欲与文明》（波士顿：灯塔出版社，1966年[1955年]）仍然是这一方面最有成就的文本。关于马尔库塞对弗洛伊德的解读的批判，参见让·拉普兰什，《他者在精神分析中的首要地位》，巴黎：Flammarion，1997年，59-88页。</dd>
