--- a/book/Text/note_17.xhtml
+++ b/book/Text/note_17.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_16.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_18.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_17">←17</a>]</dt>
 		<dd class="footnote">弗洛伊德的生物论和生机论的问题肯定更为复杂。他将死亡驱力的引入在精神分析界引起轰动，这一行为表明弗洛伊德从未抛弃推测的路线，后者对否定性的讨论在力比多理论中起着重要作用。对弗洛伊德生物学的详尽批判性解读参见让·拉普兰什，《弗洛伊德性行为的生物学错误》，巴黎：法国大学出版社，2006。</dd>
