--- a/book/Text/note_3.xhtml
+++ b/book/Text/note_3.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_2.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_4.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_3">←3</a>]</dt>
 		<dd class="footnote">参见彼得·费迪南·德鲁克，《不连续的时代：对我们不断变化的社会的指南》，伦敦：海涅曼，1969年，尤其是第四部分。关于对资本主义知识商品化的批判，参见雅克·拉康，《研讨班16：从大他者到小他者》，巴黎：苏伊尔版，2006年，39，以及《研讨班17：精神分析的另一面》，纽约：诺顿,2007年,32。拉康是否知道德鲁克的作品仍有争议，但他在许多方面对大学话语与资本主义关系的解读与德鲁克著作的中心主题相呼应。</dd>
