--- a/book/Text/note_33.xhtml
+++ b/book/Text/note_33.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_32.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_34.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_33">←33</a>]</dt>
 		<dd class="footnote">merriam-webster网站将“equivocity（等价性）”解释为“thecharacterofbeingequivocalinsignificationorpredication（在能指或谓语中模棱两可的特征）”，本文为方便理解译为“歧义性”。——译者注</dd>
