--- a/book/Text/note_46.xhtml
+++ b/book/Text/note_46.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_45.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_47.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_46">←46</a>]</dt>
 		<dd class="footnote">简明的描述见列维-莱布隆，《现代体质的追求？》，巴黎：波米尔版，2005年，61-120页。</dd>
