--- a/book/Text/note_47.xhtml
+++ b/book/Text/note_47.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_46.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_48.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_47">←47</a>]</dt>
 		<dd class="footnote">马克思明确地声称，商品的生产总是已经包括了需求的生产。例如这句著名的话：“生产不仅为需要提供了材料，而且为材料提供了需求……因此，生产不仅为主体创造了对象，而且还为对象创造了主体。如此一来，生产就产生了消费。”马克思，格利家：《政治经济学批判的基础》，伦敦：企鹅出版社，1993,9。</dd>
