--- a/book/Text/note_48.xhtml
+++ b/book/Text/note_48.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_47.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_49.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_48">←48</a>]</dt>
 		<dd class="footnote">例如，对商品结构所暗示的问题的简要总结可见，热拉尔·杜梅尼尔和多米尼克·莱维，《马克思主义资本主义经济学》，巴黎出版社，2003年，8。使用价值和交换价值之间的关系的有问题的方面相关讨论在沃尔夫冈·波尔特《使用价值理论》，柏林：提亚马特版，2001。</dd>
