--- a/book/Text/note_5.xhtml
+++ b/book/Text/note_5.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_4.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_6.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_5">←5</a>]</dt>
 		<dd class="footnote">对于精神分析政治浓缩但精辟的批判性描述，请参阅斯拉沃热·齐泽克的《少于无》，伦敦：维索出版社，2012，967-71。</dd>
