--- a/book/Text/note_54.xhtml
+++ b/book/Text/note_54.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_53.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_55.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_54">←54</a>]</dt>
 		<dd class="footnote">毫不奇怪，不光是索绪尔，乔姆斯基的语言学也非常接近经济自由主义（和新自由主义）中所包含的恋物主义陷阱和意识形态简化主义。参见让-雅克·勒塞克，《马克思主义的语言哲学》，巴黎：法国大学出版社，2004年，22-45。</dd>
