--- a/book/Text/note_59.xhtml
+++ b/book/Text/note_59.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_58.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_60.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_59">←59</a>]</dt>
 		<dd class="footnote">拉康的新词“lalangue”是“langue”（语言/舌头）和“la”（the）这两个能指的融合。因此，该术语合并了冠词和名词。这个词诞生于两个能指的碰撞，在拉康的教导过程中，在1971年11月在圣安妮医院的一次会议上首次提到这个词后，这个词受到了大量评论。除其他外，拉康将其指定为母语，通过其调制和音乐性（lala），为婴儿的第一个物体命名。“Lalangue”至少在一定程度上超出了语言法则的范围（J.C.Milner研究了这个话题）。然而，“lalangue”不是一种语言：拉康回归到但丁的情诗，以及他认为未能创造出一种新语言的东西。虽然“lalangue”说出了某种爱的音乐（和谐？），但它仍然不受语言框架的驯服，这种语言框架通过其法则：规则、限制，以及因此而来的阉割。“Lalangue”问题对精神分析治疗提出了问题。这个概念已经被精神分析学家充分研究过。然而，他们的大多数研究结果都与其在治疗中的使用相冲突。本文认为，在精神分析中，“lalangue”应该被解释为一个不明的声音对象。（来源：https://www.cairn-int.info/article-E_ESS_029_0007--lalangue-in-questions.htm）——译者注</dd>
