--- a/book/Text/note_11.xhtml
+++ b/book/Text/note_11.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_10.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_12.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_11">←11</a>]</dt>
 		<dd class="footnote">卡尔·马克思，《资本论》，第1卷，伦敦：企鹅出版社，1992,255。</dd>
