--- a/book/Text/note_14.xhtml
+++ b/book/Text/note_14.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_13.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_15.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_14">←14</a>]</dt>
 		<dd class="footnote">我在此处参考本杰明·诺伊斯正在进行的“反生命”项目。</dd>
