--- a/book/Text/note_16.xhtml
+++ b/book/Text/note_16.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_15.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_17.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_16">←16</a>]</dt>
 		<dd class="footnote">福柯，《认知意志》，伦敦：企鹅出版社，1998年，17页。</dd>
