--- a/book/Text/note_21.xhtml
+++ b/book/Text/note_21.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_20.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_22.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_21">←21</a>]</dt>
 		<dd class="footnote">路易·阿尔都塞，《精神分析著作》，巴黎：Stock/IMEC,1993,226。</dd>
