--- a/book/Text/note_26.xhtml
+++ b/book/Text/note_26.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_25.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_27.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_26">←26</a>]</dt>
 		<dd class="footnote">这段见闻来自于拉康和荣格之间的交流。参见拉康，《拉康选集》，336页。</dd>
