--- a/book/Text/note_31.xhtml
+++ b/book/Text/note_31.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_30.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_32.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_31">←31</a>]</dt>
 		<dd class="footnote">见费迪南·德·索绪尔，《普通语言学教程》，纽约：哲学图书馆，1959年，112。有关横杠的一般介绍，见同上。66-7.</dd>
