--- a/book/Text/note_37.xhtml
+++ b/book/Text/note_37.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_36.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_38.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_37">←37</a>]</dt>
 		<dd class="footnote">吕克·博尔坦斯基和夏娃·希亚佩洛，《资本主义的新精神》，伦敦：Verso，2007。</dd>
