--- a/book/Text/note_42.xhtml
+++ b/book/Text/note_42.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_41.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_43.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_42">←42</a>]</dt>
 		<dd class="footnote">弗洛伊德，《标准版本》，第3卷，第322卷。</dd>
