--- a/book/Text/note_45.xhtml
+++ b/book/Text/note_45.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_44.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_46.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_45">←45</a>]</dt>
 		<dd class="footnote">让-克劳德·米尔纳，《三重副本》，巴黎：维迪尔，1997,76。</dd>
