--- a/book/Text/note_8.xhtml
+++ b/book/Text/note_8.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_7.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_9.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_8">←8</a>]</dt>
 		<dd class="footnote">弗洛伊德在他的《精神分析新论》（1933）中小心翼翼地触及了马克思主义的世界观。他的保留意见将在第二章中讨论。</dd>
