--- a/book/Text/note_107.xhtml
+++ b/book/Text/note_107.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_106.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_108.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_107">←107</a>]</dt>
 		<dd class="footnote">“无产阶级和资本主义阶级同样受资本的约束，但前者更进一步：资本可以脱离于资本家而存在，但无法脱离于创造价值的劳动而存在。”莫伊舍·普殊同，《时间、劳动与社会统治》，剑桥：剑桥大学出版社，2003年，357年。</dd>
