--- a/book/Text/note_108.xhtml
+++ b/book/Text/note_108.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_107.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_109.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_108">←108</a>]</dt>
 		<dd class="footnote">尤其参见弗洛伊德早期的著作《文明的性道德和现代神经疾病》，它在许多方面为他后来在《文明及其不满》中描述的观念埋下伏笔。原始父亲的引入带来了一个有趣的转折，因为弗洛伊德神话的结构展示了“完全”享乐的幻想性地位。儿子们认为，杀死父亲能让他们得到不被阉割的享乐，而他们实际上得到的是普遍的阉割，死去的父亲以象征性禁令的形式回归，构成并跨越了所有的社会关系。</dd>
