--- a/book/Text/note_111.xhtml
+++ b/book/Text/note_111.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_110.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_112.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_111">←111</a>]</dt>
 		<dd class="footnote">我在这里参考姆拉顿·多拉尔，《关于范围》，卢布尔雅那：阿纳拉克塔，2002年，49-54页。</dd>
