--- a/book/Text/note_118.xhtml
+++ b/book/Text/note_118.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_117.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_119.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_118">←118</a>]</dt>
 		<dd class="footnote">拉康，《精神分析的另一面》，49页。关于熵的进一步讨论，请参见阿伦卡·祖帕西克“当剩余享受达到剩余价值”，在贾斯汀·克莱门斯和拉塞尔·格里格（电子版）《雅克拉康和精神分析的另一面》达勒姆，北卡：杜克大学出版社，2006,159页。</dd>
