--- a/book/Text/note_121.xhtml
+++ b/book/Text/note_121.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_120.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_122.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_121">←121</a>]</dt>
 		<dd class="footnote">在马克思和弗洛伊德的书中，症状假设了这种混乱的物质化状态和真正的僵局。参见雅克·拉康，“第三个”，在：《弗洛伊德的原因》中，2011年，第79卷,17页。</dd>
