--- a/book/Text/note_127.xhtml
+++ b/book/Text/note_127.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_126.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_128.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_127">←127</a>]</dt>
 		<dd class="footnote">“在一个已经涌现的世界中，以一种确实存在的方式，有一种存在——不是科学思考，而是某种程度上被客体化的科学，我的意思是这些东西完全由科学编造，只是这些小东西、小玩意等等，它们目前占据和我们相同的空间——在一个这种涌现发生的世界里，体力劳动水平的实际知识有足够力量成为一个颠覆性的因素吗？对我来说，这就是这个问题所在”（拉康，《精神分析的另一面》，149）。</dd>
