--- a/book/Text/note_128.xhtml
+++ b/book/Text/note_128.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_127.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_129.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_128">←128</a>]</dt>
 		<dd class="footnote">马克思在《资本论》的另一个关键摘录中提到了这种实质性的丧失：“如果我们无视商品的使用价值，就只剩下一种属性，那就是作为劳动产物的存在。”但即使是劳动产物也已经在我们手中转变了。如果我们从它的使用价值中进行抽象，我们就同时抽象化了使它成为使用价值的物质成分和形式……伴随着劳动产物的有用特性的消失的，是体现于其中的劳动种类的有用特性的一并消失；这随之导致了不同具体劳动形式的消失。它们不能再被区分了，而是全被简化为同一种劳动，即抽象的人类劳动”（马克思，《资本论》，第1卷，第128页）。</dd>
