--- a/book/Text/note_132.xhtml
+++ b/book/Text/note_132.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_131.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_133.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_132">←132</a>]</dt>
 		<dd class="footnote">这是拉康从阿尔都塞对《资本论》的解读中采用的：“无论他的评论家们是否为结构主义者，他们似乎已经表明马克思本人是一个结构主义者。因为它完全处于这样一点上……这是由劳动力市场的主导地位决定的，而剩余价值的功能被揭示为马克思“思想”的原因”（同上，17）。</dd>
