--- a/book/Text/note_62.xhtml
+++ b/book/Text/note_62.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_61.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_63.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_62">←62</a>]</dt>
 		<dd class="footnote">在《研讨班XX》中，拉康创造了一个新词——“癔言学”（linguisterie），以此来表明他自己对“语言”一词的使用是区别于语言学的。语言学关心的是语言与知识的形式化。另一方面，癔言学则是受到语言学所忽视的那个语言的方面。它指的是语言中那些意义失败与崩解的时刻；它是有关言词失败的学问。芬克相当恰如其分地将“癔言学”（linguisterie）译作“恶搞语言学”（linguistricks），并以此来强调无意识的顽皮，因为他总是在试图绊倒主体，并试图捉弄（playtrickson）意识的思维。正是在这个意义上，而非在形式语言学的意义上，无意识是像语言那样结构的。（来源：导读拉康/（英）霍默（Homer,S.）著；李新雨译.—重庆：重庆大学出版社,2014.9）——译者注</dd>
