--- a/book/Text/note_64.xhtml
+++ b/book/Text/note_64.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_63.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_65.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_64">←64</a>]</dt>
 		<dd class="footnote">弹坑389d。参见柏拉图，《对话集》，普林斯顿，新泽西州：普林斯顿大学出版社，2005,428。</dd>
