--- a/book/Text/note_66.xhtml
+++ b/book/Text/note_66.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_65.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_67.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_66">←66</a>]</dt>
 		<dd class="footnote">“但如果所有人都同样是对的和错的，相信这个的人既说不出任何可理解的话；因为他说“是”的同时说了“不是”。如果他不做出判断而思考和不思考，只是若无其事，他和植物之间会有什么区别呢？”满足了。1008b.参见《亚里士多德全集》，第2卷，普林斯顿，新泽西州：普林斯顿大学出版社，1995,1592年。</dd>
