--- a/book/Text/note_79.xhtml
+++ b/book/Text/note_79.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_78.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_80.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_79">←79</a>]</dt>
 		<dd class="footnote">关于神正论在古典自由主义和当代新自由主义中的作用，见约瑟夫·沃格尔，《资本的幽灵》，斯坦福，加州：斯坦福大学出版社，2014。</dd>
