--- a/book/Text/note_81.xhtml
+++ b/book/Text/note_81.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_80.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_82.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_81">←81</a>]</dt>
 		<dd class="footnote">参见本书的第二章，其中弗洛伊德对快乐收获的介绍进行了广泛的研究。在1973年11月20日未发表的讨论会上，拉康公开承认快乐收获和剩余享乐之间的连续性。</dd>
