--- a/book/Text/note_85.xhtml
+++ b/book/Text/note_85.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_84.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_86.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_85">←85</a>]</dt>
 		<dd class="footnote">斯大林的文本也没有简单地宣称语言为基础，因为这只会重新踏进语言与革命、语言转型和社会转型之间关系的困境。关于拉康教学中斯大林公理的详细情境，请参见让·克莱德-米尔纳，《克莱尔全集》，巴黎：Seuil出版社，1995年，85-8年。关于马克思主义的更广泛的讨论，请参见勒内·勒·赫米特《科学与意识形态：马尔，马尔主义，马尔主义者》，巴黎：奴隶练习曲学院，1987年。拉康在政治上仍然是现实的：被符号的逻辑所隔离的基本结构关系与他后来所说的大学话语（统治结构）是一样的。因此，政治包括对统治关系的持久斗争以及统治倾向和解放倾向之间的结构张力。</dd>
