--- a/book/Text/note_98.xhtml
+++ b/book/Text/note_98.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_97.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_99.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_98">←98</a>]</dt>
 		<dd class="footnote">拉康，《从大他者到小他者》，16岁。同源性和同伦性的重叠将指导拉康的教学逐步识别拓扑和结构：拓扑不是在结构中“用来引导我们”的，拓扑是这种结构——作为由语言组成的链条秩序的追溯”（拉康，《他者的著作》，483）。</dd>
