--- a/book/Text/note_114.xhtml
+++ b/book/Text/note_114.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_113.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_115.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_114">←114</a>]</dt>
 		<dd class="footnote">参见安森·拉宾巴赫，《人类运动：能量、疲劳和现代性的起源》，洛杉矶：加州大学出版社，1992年，72-81。</dd>
