--- a/book/Text/note_116.xhtml
+++ b/book/Text/note_116.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_115.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_117.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_116">←116</a>]</dt>
 		<dd class="footnote">“adaquatio”的释义为托马斯·阿奎那语境下的“一致，符合”。阿奎那认为：真理即事物与理智的符合（veritasestadaequatioreietintellectus）。更详细的解读见https://www.douban.com/note/859271276/?_i=4220997PP2qUcu。——译者注</dd>
