--- a/book/Text/note_122.xhtml
+++ b/book/Text/note_122.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_121.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_123.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_122">←122</a>]</dt>
 		<dd class="footnote">可以这么说，科伊尔在科学方面是拉康语境下的“理应知道的主体”。这一理论影响的更详细分析见米尔纳,《清晰的工作》，37-69。</dd>
