--- a/book/Text/note_125.xhtml
+++ b/book/Text/note_125.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_124.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_126.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_125">←125</a>]</dt>
 		<dd class="footnote">雅克·拉康，《研讨班11：精神分析的四个基本概念》，纽约：诺顿，1998年，22。</dd>
