--- a/book/Text/note_133.xhtml
+++ b/book/Text/note_133.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_132.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_134.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_133">←133</a>]</dt>
 		<dd class="footnote">同上，35。</dd>
