--- a/book/Text/note_65.xhtml
+++ b/book/Text/note_65.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_64.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_66.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_65">←65</a>]</dt>
 		<dd class="footnote">“大多数哲学问题和陈述都是基于我们不理解自己的语言逻辑的事实。”维特根斯坦，法兰克福：苏尔坎普，1984年，26。</dd>
