--- a/book/Text/note_97.xhtml
+++ b/book/Text/note_97.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_96.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_98.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_97">←97</a>]</dt>
 		<dd class="footnote">参见拉康，《从大他者到小他者》，16，和《他者的著作》，434。</dd>
