--- a/book/Text/information.xhtml
+++ b/book/Text/information.xhtml
@@ -17,6 +17,7 @@
 	</style>
 </head>
 <body>
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="../index.html"><button style="width:5rem;height:2.5rem">←</button></a><a href="claim.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<p>&#160;</p>
 	<p><span>THE CAPITALIST UNCONSCIOUS</span></p>
 	<p><span>资本主义的无意识</span></p>
