--- a/book/Text/claim.xhtml
+++ b/book/Text/claim.xhtml
@@ -14,6 +14,7 @@
 	</style>
 </head>
 <body>
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="information.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="nav.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<p>&#160;</p>
 	<p style="text-align: center;font-size: 1.3rem;text-indent: 0"><span>声明</span></p>
 	<ol>
