--- a/book/Text/nav.xhtml
+++ b/book/Text/nav.xhtml
@@ -11,6 +11,7 @@
 	</style>
 </head>
 <body epub:type="frontmatter">
+<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="claim.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="introduction.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
   <nav epub:type="toc" id="toc" role="doc-toc">
     <h1>目录</h1>
     <ol>
