--- a/book/Text/introduction.xhtml
+++ b/book/Text/introduction.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="nav.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="introduction_en.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<h1><p>导言：</p><p>拉康第二次回到弗洛伊德</p></h1>
 	<i class="quote">不要期待在我的话语里找到比“我不自诩有解决方案”更具颠覆性的东西。</i>
 	<p style="text-align: right">雅克·拉康《精神分析的另一面》</p>
