--- a/book/Text/introduction_en.xhtml
+++ b/book/Text/introduction_en.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body class="calibre">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="introduction.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="chapter_1.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<h1><p>Introduction:</p><p>Lacan's Second Return to Freud</p></h1>
 	<i class="quote">Don't expect anything more subversive in my discourse than that I do not claim to have a solution.</i>
 	<p style="text-align: right">Jacques Lacan, The Other Side of Psychoanalysis</p>
