--- a/book/Text/claim.xhtml
+++ b/book/Text/claim.xhtml
@@ -13,15 +13,16 @@
 			font-weight: bold;}
 	</style>
 </head>
-<body style="align-items: center;justify-content: center">
+<body>
 	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="information.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="nav.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
-	<p>&#160;</p>
-	<p style="text-align: center;font-size: 1.3rem;text-indent: 0"><span>声明</span></p>
-	<ol>
-		<li>本翻译作品为非盈利翻译，仅供学习、观赏，严禁用于任何目的的商业用途！</li>
-		<li>本书英文部分使用的是SAMO <span style="color:#c00000">TOMŠIČ</span>所著的THE CAPITALIST UNCONSCIOUS</li>
-		<li>译者们都不是专业翻译工作者，时间仓促，水平有限，必然存在翻译质量问题，如有错误，请多见谅。</li>
-		<li>翻译有问题的地方可以向润土账号后台私信反馈</li>
-	</ol>
+	<div style="align-items: center;justify-content: center">
+		<p style="font-size: 1.3rem;text-indent: 0"><span>声明</span></p>
+		<ol>
+			<li>本翻译作品为非盈利翻译，仅供学习、观赏，严禁用于任何目的的商业用途！</li>
+			<li>本书英文部分使用的是SAMO <span style="color:#c00000">TOMŠIČ</span>所著的THE CAPITALIST UNCONSCIOUS</li>
+			<li>译者们都不是专业翻译工作者，时间仓促，水平有限，必然存在翻译质量问题，如有错误，请多见谅。</li>
+			<li>翻译有问题的地方可以向润土账号后台私信反馈</li>
+		</ol>
+	</div>
 </body>
 </html>
