--- a/book/Text/information.xhtml
+++ b/book/Text/information.xhtml
@@ -18,18 +18,19 @@
 </head>
 <body style="align-items: center">
 	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="/index.html"><button style="width:5rem;height:2.5rem">←</button></a><a href="claim.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
-	<p>&#160;</p>
-	<p><span>THE CAPITALIST UNCONSCIOUS</span></p>
-	<p><span>资本主义的无意识</span></p>
-	<p>&#160;</p>
-	<p><span>MARX AND LACAN</span></p>
-	<p><span>马克思与拉康</span></p>
-	<p>&#160;</p>
-	<p><span>中英对照版</span></p>
-	<p>&#160;</p>
-	<p><span>参考SAMO <span style="color:#c00000">TOMŠIČ</span></span></p>
-	<p><span>THE CAPITALIST UNCONSCIOUS</span></p>
-	<p>&#160;</p>
-	<p><span>润土翻译小组翻译</span></p>
+	<div style="align-items: center;justify-content: center">
+		<p><span>THE CAPITALIST UNCONSCIOUS</span></p>
+		<p><span>资本主义的无意识</span></p>
+		<p>&#160;</p>
+		<p><span>MARX AND LACAN</span></p>
+		<p><span>马克思与拉康</span></p>
+		<p>&#160;</p>
+		<p><span>中英对照版</span></p>
+		<p>&#160;</p>
+		<p><span>参考SAMO <span style="color:#c00000">TOMŠIČ</span></span></p>
+		<p><span>THE CAPITALIST UNCONSCIOUS</span></p>
+		<p>&#160;</p>
+		<p><span>润土翻译小组翻译</span></p>
+	</div>
 </body>
 </html>
