--- a/book/Text/information.xhtml
+++ b/book/Text/information.xhtml
@@ -16,21 +16,23 @@
 			text-indent: 0;}
 	</style>
 </head>
-<body style="align-items: center">
+<body>
 	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="/index.html"><button style="width:5rem;height:2.5rem">←</button></a><a href="claim.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
-	<div style="align-items: center;justify-content: center">
-		<p><span>THE CAPITALIST UNCONSCIOUS</span></p>
-		<p><span>资本主义的无意识</span></p>
-		<p>&#160;</p>
-		<p><span>MARX AND LACAN</span></p>
-		<p><span>马克思与拉康</span></p>
-		<p>&#160;</p>
-		<p><span>中英对照版</span></p>
-		<p>&#160;</p>
-		<p><span>参考SAMO <span style="color:#c00000">TOMŠIČ</span></span></p>
-		<p><span>THE CAPITALIST UNCONSCIOUS</span></p>
-		<p>&#160;</p>
-		<p><span>润土翻译小组翻译</span></p>
+	<div style="z-index: -1;padding: 0;position: absolute;left: 0;top: 0;display: flex;justify-content: center;align-items: center;width: 100%;height: 100%;">
+		<div style="display:block">
+			<p>THE CAPITALIST UNCONSCIOUS</p>
+			<p>资本主义的无意识</p>
+			<p>&#160;</p>
+			<p>MARX AND LACAN</p>
+			<p>马克思与拉康</p>
+			<p>&#160;</p>
+			<p>中英对照版</p>
+			<p>&#160;</p>
+			<p>参考SAMO <span style="color:#c00000">TOMŠIČ</span></p>
+			<p>THE CAPITALIST UNCONSCIOUS</p>
+			<p>&#160;</p>
+			<p>润土翻译小组翻译</p>
+		</div>
 	</div>
 </body>
 </html>
