--- a/book/Text/index.html
+++ b/book/Text/index.html
@@ -17,6 +17,6 @@
 			<image width="700" height="1071" xlink:href="book/Images/cover.jpeg"/>
 		</svg>
 	</div>
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"></a><a href="book/Text/information.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"></a><a href="information.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 </body>
 </html>
