--- a/book/Text/cover.xhtml
+++ b/book/Text/cover.xhtml
@@ -14,7 +14,7 @@
 <body>
 	<div>
 		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 700 1071" preserveAspectRatio="none">
-			<image width="700" height="1071" xlink:href="book/Images/cover.jpeg"/>
+			<image width="700" height="1071" xlink:href="../Images/cover.jpeg"/>
 		</svg>
 	</div>
 	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"></a><a href="information.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
