--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div style="z-index: -1;padding: 0;position: absolute;left: 0;top: 0;display: flex;justify-content: center;align-items: center;width: 100%;height: 100%;">
 		<div style="display:block;max-width: 60%;">
 			<p>本书为北京润土植青俱乐部翻译小组的第一个翻译作品，其中的翻译部分由小组成员合力完成，欢迎关注B站“润土青年”查看最新进度。</p>
-			<p>《资本主义的无意识：马克思与拉康》(The Capitalist Unconscious: Marx and Lacan) 一书由萨莫·托姆西奇（Samo Tomsic）撰写，这本书探讨了卡尔·马克思和雅克·拉康的思想如何能够帮助我们理解当代资本主义社会中的心理和社会动态。书试图将马克思主义理论与拉康的精神分析理论相结合，以提供一种新的视角来批判现代社会的经济结构。托姆西奇在这部著作中探索了个人在资本主义体系下的主观体验，并提出了一个关于资本逻辑和个体欲望之间关系的新框架。书中不仅讨论了马克思对于异化、劳动价值以及剩余价值的概念，还深入探讨了拉康的心理学理论，特别是其关于主体身份形成以及语言对人类意识的影响的观点。通过结合这两位思想家的工作，作者试图揭示资本主义社会如何塑造我们的心理需求和欲望，并影响我们与周围世界的关系。这种跨学科的方法为理解现代社会中的经济、文化和个人层面的问题提供了一个独特视角。这本书对于那些希望从新的角度审视马克思理论及其在当代文化和社会背景下的应用有兴趣的读者来说是一个有价值的资源，同时它也对了解拉康思想如何应用于社会分析感兴趣的人有吸引力。</p>
+			<p>《资本主义的无意识：马克思与拉康》(The Capitalist Unconscious: Marx and Lacan) 一书由萨莫·托姆西奇（Samo Tomsic）撰写，这本书探讨了卡尔·马克思和雅克·拉康的思想如何能够帮助我们理解当代资本主义社会中的心理和社会动态。书试图将马克思主义理论与拉康的精神分析理论相结合，以提供一种新的视角来批判现代社会的经济结构。托姆西奇在这部著作中探索了个人在资本主义体系下的主观体验，并提出了一个关于资本逻辑和个体欲望之间关系的新框架。书中不仅讨论了马克思对于异化、劳动价值以及剩余价值的概念，还深入探讨了拉康的精神分析理论，特别是其关于主体身份形成以及语言对人类意识的影响的观点。通过结合马克思与拉康的工作，作者试图揭示资本主义社会如何塑造我们的心理需求和欲望，并影响我们与周围世界的关系。这种跨学科的方法为理解现代社会中的经济、文化和个人层面的问题提供了一个独特视角。这本书对于那些希望从新的角度审视马克思理论及其在当代文化和社会背景下的应用有兴趣的读者来说是一个有价值的资源，同时它也对了解拉康思想如何应用于社会分析感兴趣的人有吸引力。</p>
 		</div>
 	</div>
 </body>
