--- a/book/Text/cover.xhtml
+++ b/book/Text/cover.xhtml
@@ -5,9 +5,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="calibre:cover" content="true"/>
-	<title>Cover</title>
+	<title>封面</title>
 	<style type="text/css" title="override_css">
-		@page {padding: 0pt; margin:0pt}
+		@page {padding: 0; margin:0}
 		body { text-align: center; padding:0pt; margin: 0pt; }
 	</style>
 </head>
