--- a/book/Text/nav.xhtml
+++ b/book/Text/nav.xhtml
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="en" xml:lang="en">
 <head>
-	<title>ePub NAV</title>
+	<title>目录</title>
 	<meta charset="utf-8"/>
 	<link href="../Styles/sgc-nav.css" rel="stylesheet" type="text/css"/>
 	<style>
