--- a/book/Text/information.xhtml
+++ b/book/Text/information.xhtml
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-	<title></title>
+	<title>扉页</title>
 	<style type="text/css" title="override_css">
 		body{padding: 0;
 			color: #000000;
