--- a/book/Text/introduction_en.xhtml
+++ b/book/Text/introduction_en.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
 	<link rel="stylesheet" type="text/css" href="../Styles/content.css"/>
-<title></title>
+	<title>Introduction</title>
 </head>
 
 <body class="calibre">
