修改样式名称

--- a/book/Text/note_96.xhtml
+++ b/book/Text/note_96.xhtml
@@ -7,7 +7,7 @@
 	<title>注释</title>
 </head>
 
-<body class="calibre">
+<body class="main">
 	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_95.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_97.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_96">←96</a>]</dt>
@@ -16,4 +16,3 @@
 	</dl>
 </body>
 </html>
-
