--- a/book/Text/note_1.xhtml
+++ b/book/Text/note_1.xhtml
@@ -7,8 +7,8 @@
 	<title>注释</title>
 </head>
 
-<body class="calibre">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="chapter_1_en.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_2.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+<body class="main">
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_0.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_2.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<h1>Notes</h1>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_1">←1</a>]</dt>
@@ -17,4 +17,3 @@
 	</dl>
 </body>
 </html>
-
