--- a/book/Text/note_33.xhtml
+++ b/book/Text/note_33.xhtml
@@ -7,7 +7,7 @@
 	<title>注释</title>
 </head>
 
-<body class="calibre">
+<body class="main">
 	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_32.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_34.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_33">←33</a>]</dt>
@@ -15,4 +15,3 @@
 	</dl>
 </body>
 </html>
-
