--- a/book/Text/cover.xhtml
+++ b/book/Text/cover.xhtml
@@ -7,16 +7,16 @@
 	<meta name="calibre:cover" content="true"/>
 	<title>封面</title>
 	<style type="text/css" title="override_css">
-		@page {padding: 0; margin:0}
+		@page {padding: 0pt; margin:0pt}
 		body { text-align: center; padding:0pt; margin: 0pt; }
 	</style>
 </head>
 <body>
+	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="information .xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<div>
 		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 700 1071" preserveAspectRatio="none">
 			<image width="700" height="1071" xlink:href="../Images/cover.jpeg"/>
 		</svg>
 	</div>
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="information.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 </body>
 </html>
