--- a/book/Text/information.xhtml
+++ b/book/Text/information.xhtml
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="cover.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="claim.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
-	<div style="z-index: -1;padding: 0;position: absolute;left: 0;top: 0;display: flex;justify-content: center;align-items: center;width: 100%;height: 100%;">
+	<div style="padding: 0;position: absolute;left: 0;top: 0;display: flex;justify-content: center;align-items: center;width: 100%;height: 100%">
 		<div style="display:block">
 			<p>THE CAPITALIST UNCONSCIOUS</p>
 			<p>资本主义的无意识</p>
