--- a/book/Text/claim.xhtml
+++ b/book/Text/claim.xhtml
@@ -14,7 +14,7 @@
 	</style>
 </head>
 <body>
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="information.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="catalogue.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="information.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="catalogue.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<div style="padding: 0;position: absolute;left: 0;top: 0;display: flex;justify-content: center;align-items: center;width: 100%;height: 100%;">
 		<div>
 			<p style="text-align: center;font-size: 1.3rem;text-indent: 0"><span>声明</span></p>
